favicon added, font swap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,5 +66,5 @@ h6 {
 body {
   /* color: var(--foreground);
   background: var(--background); */
-  font-family: var(--font-geist-sans), Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
 }
